docs/book/samples/appa/underscore_check.out
error[syntax]: `_` does not appear in binding patterns; omit fields with a keyed read
  --> underscore_check.kso:6:8
   6 |   user _ name = user false "clay"
              ^
